--- a/public/style.css
+++ b/public/style.css
@@ -4,3 +4,11 @@ body {
   font-family: 'Roboto', sans-serif;
   /* font-family: 'Roboto Slab', serif; */
 }
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+
+  select,
+  textarea,
+  input {
+    font-size: 16px;
+  }
+}
